--- a/Views/first page.html
+++ b/Views/first page.html
@@ -1,51 +1,146 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>frontpage</title>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-   
-    <link rel="stylesheet" type="text/css" href="/Styles/first page.css">
-   <!--  <link rel="stylesheet" href="bootstrap.min.css"> -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-     <script src="/Script/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather" />
-        
+<html lang="">
+<!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
+<head>
+<title>First Page</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+ <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
 
 </head>
-<body background="new6.jpg">
-
-
-<div class="topnav" id="top-menu">
-  <!-- <img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" > -->
-    <ul>
-
-        <li><a  href="/" id="entry">Entry List</a></li>
-       <li><a href="/guestform" id="gst">Guest Form</a></li>
-       <li><a href="/contact" id="cntct">Contact</a></li>
-       <li><a class="right" href="/auth" id="login"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
-       <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
-        
-     </ul>
+<body id="top">
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="wrapper row0" style=" background: #00897b;" >
+  <div id="topbar"  style="background-color: #00897b;"> 
+    
+    <!-- ################################################################################################ -->
+    <ul  style="background-color: #00897b;">
+      
+        <li style="background-color: #00897b;" ><a href="index.html" style="background-color: #00897b;">Entry List</a></li>
+        <li style="background-color: #00897b;"><a href="/guestform" style="background-color: #00897b;" href="#">Guest Form</a> </li>   
+       
+       <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b; ">Login <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+   </ul>
+    
+    <!-- ################################################################################################ -->
+  </div>
 
 </div>
 
-<div class = "container" style="text-align: center ; margin-top: 10% ; width: 50%">
-<h1 style="color:white;font-family:Tangerine,Palatino ; font-size: 450%">Entry Register of Osmani Hall</h1>
+<div class="wrapper row1" style=" background-color:white ;" >
+  <div id="topbar" style="background-color: white"> 
+    <!-- ################################################################################################ -->
+    <ul class="nospace" style="background-color:white;">
+      
+        <li style="background-color: white"> <img src="logo.png" style="width:100px ; background-color: white; height: 100px ; margin-left: 20%"></li>
+        <li ><h1 id="logo" style="background-color: white"><a href="index.html" style="color:green ;background-color: white; width:100%; margin-top: -5%">Military Institute of Science and Technology</a></h1> </li>
+      </ul>
+    
+    <!-- ################################################################################################ -->
+  </div>
+</div>
+ 
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
 
-<h2 style="font-size: 150%;color:white; font-family: Josefin Slab,Times New Roman;" >The website is about the digitalization of entry exit system of Osmany Hall. The exact time of arrival and departure of students will be automatically registered and if any occurrences appear, higher authority will be readily informed.</h2>
- </div>
-  
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="bgded" style="background-image:url('images/demo/back3.jpg'); ">
+  <div id="pageintro" class="hoc clear"> 
+    <!-- ################################################################################################ -->
+    <article>
+      <h3 class="heading" style="font-family:Palatino ; font-size: 250% ;color:#00897b; ">Entry Register of Osmani Hall</h3>
+      <p style="font-family: Josefin Slab,Times New Roman;" >The website is about the digitalization of entry exit system of Osmany Hall. The exact time of arrival and departure of students will be automatically registered and if any occurrences appear, higher authority will be readily informed.</p>
+    </article>
+    <!-- ################################################################################################ -->
+  </div>
+</div>
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<!-- ################################################################################################ -->
+<div class="wrapper row3">
+  <main class="hoc container clear"> 
+    <!-- main body -->
+    <!-- ################################################################################################ -->
+    
+      <h6 class="heading" style="color: #00897b
+  ; text-align: center ; font-family: Tangerine ; font-size: 350%">about</h6>
+      <p >MIST is a residential institute. Right now MIST has one main Student Hall named “Osmany Hall” and 6 extension halls. The main hall was established in 2006 and the extension were in 2015. Osmany Hall is an 8 storied building with female and male wings, each wing having a capacity of 260 students. There are 20 staffs for each wing. The hall building accommodates a number of offices to facilitate the administrative works. Both Male and Female Wing has two seven storied extension building each accommodating additional 500 students. Therefore, the total seat capacity of the Hall is 1220 students (male and female). Osmany Hall is well-known for its structural beauty, residential facilities and the security of the students compared to the other hall in Bangladesh.A digitization of the current manual entry register is being developed that will keep track of the records digitally which will ensure the safety and security of the resident students of Osmani hall.</p>
+    
 
-  
+    <div class="group" style="margin-top: 10%">
+       <div  class="one_half first" style="max-width:500px">
+       <div > <img class="mySlides" src="images/demo/back.jpg" alt="">
+          <img class="mySlides" src="images/demo/back3.jpg" style="width:100%">
+           <img class="mySlides" src="back1.jpg" style="width:100%">
+          <img class="mySlides" src="back2.jpg" style="width:100%">
+          <img class="mySlides" src="back4.jpg" style="width:100%">
+          <img class="mySlides" src="back3.jpg" style="width:100%"></div>
+      </div>
+       <div class="one_half">
+          <li  style="text-align:center ; margin-top:-5.5%">
+            <article>
+        
+          <div class="transbox" style="margin: 30px; border: 1px solid #666666;background-color:#f2f2f2; filter: alpha(opacity=60);">
+            <h6 class="heading" style="font-weight: bold;color:#00897b; text-align:center;margin-top:5%;">Hall Committee</h6>
+            <p style="margin: 5%;color: #666666;text-align:center">Overall activities of the hall are administered by a committee, namely Hall Committee. Members of the committee can be informed in case of any emergency.</p>
+            <h6 class="heading" style="color:#00897b; margin-left:3%; margin-top:5%;"><u>Committee</u></h6>
+            <p>Provost</p>
+            <p> Deputy Provost</p>
+            <p>Assistant Provost</p>
+            <p>Hall Manager</p>
+            <p>Click here for more <a href="" style="color:#0080ff">detail</a></p>
+            <!--<img src="provost.jpg" style="width:50%;height:50% ; radius:50%">
+            <p>Brig Gen Md Khalil-Ur- Rahman</p>
+            <p class="fa fa-envelope-o"> dswsir.mist@gmail.com</p><br>
+            <p class="fa fa-phone"> 01769023940</p>-->
+
+          </div>
+        
+      </article>
+          </li>
+        </div>
+       
+      
+    </div>
+    <!-- ################################################################################################ -->
+    <!-- / main body -->
+    <div class="clear"></div>
+  </main>
+</div>
+
+<script>
+var myIndex = 0;
+carousel();
+
+function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+       x[i].style.display = "none";  
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}    
+    x[myIndex-1].style.display = "block";  
+    setTimeout(carousel, 2000); // Change image every 2 seconds
+}
+</script>
+<a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
+<!-- JAVASCRIPTS -->
+
+<script src="layout/scripts/jquery.min.js"></script>
+<script src="layout/scripts/jquery.backtotop.js"></script>
+<script src="layout/scripts/jquery.mobilemenu.js"></script>
 
 
 
 
 </body>
 </html>
-
