--- a/Views/first page.html
+++ b/Views/first page.html
@@ -21,10 +21,11 @@
     <!-- ################################################################################################ -->
     <ul  style="background-color: #00897b;">
       
-        <li style="background-color: #00897b;" ><a href="index.html" style="background-color: #00897b;">Entry List</a></li>
-        <li style="background-color: #00897b;"><a href="/guestform" style="background-color: #00897b;" href="#">Guest Form</a> </li>   
+        <li style="background-color: #00897b;" ><a href="" style="background-color: #00897b;">Entry List</a></li>
+        <li style="background-color: #00897b;"><a href="/guestform" style="background-color: #00897b;" >Guest Form</a> </li>  
+        <li style="background-color: #00897b;"><a href="/" style="background-color: #00897b;">Contact</a> </li>   
        
-       <li style="background-color: #00897b;" ><a href="/login" title="Login" style="background-color: #00897b; ">Login <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
+       <li style="background-color: #00897b;" ><a href="login" title="Login" style="background-color: #00897b; ">Login <i class="fa fa-lg fa-sign-in" style="background-color: #00897b;"></i></a></li>
    </ul>
     
     <!-- ################################################################################################ -->
@@ -38,7 +39,7 @@
     <ul class="nospace" style="background-color:white;">
       
         <li style="background-color: white"> <img src="logo.png" style="width:100px ; background-color: white; height: 100px ; margin-left: 20%"></li>
-        <li ><h1 id="logo" style="background-color: white"><a href="index.html" style="color:green ;background-color: white; width:100%; margin-top: -5%">Military Institute of Science and Technology</a></h1> </li>
+        <li ><h1 id="logo" style="background-color: white ;color:green ; background-color: white; width:100%; margin-top: -5%">Military Institute of Science and Technology</h1> </li>
       </ul>
     
     <!-- ################################################################################################ -->
