--- a/Views/application.html
+++ b/Views/application.html
@@ -18,38 +18,55 @@
 
 
       <link rel="stylesheet" href="Styles/application.css">
-            
+      <link rel="stylesheet" href="toggled-search-bar.css">        
   
 </head>
 
 <body>
 
-<nav class="navbar navbar-inverse" style="background-color:#00897b;color: white ">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      
-    </div>
+<nav class="navbar navbar-inverse " style="background-color:#00897b;color: white ;border-color: #00897b" id="navbar">
+ <div class="container-fluid">
+    
     <ul class="nav navbar-nav">
         <li><a  href="/" id="home" style="color: white">Home</a></li>
       <li><a  href="/" id="entry" style="color: white">Entry List</a></li>
        <li><a href="/residentstudent" id="gst" style="color: white;">Resident Student</a></li>
        <li><a href="/contact" id="cntct" style="color: white">Contact</a></li>
     </ul>
-    <ul class="nav navbar-nav navbar-right" >
+  
 
-      <!-- <div class="input-group input-group-icon" style="color:  #616a6b  ">
-        <input type="text" placeholder="Search" name="Search" required/>
-        <div class="input-icon"><i class="fa fa-search" style="color: #00897b"></i></div>
-      </div> -->
-      <li><input href="#" class="right search" data-toggle="dropdown" placeholder="Enter Student ID"></input></li>
-      
-    </ul>
-  </div>
-</nav>
+
+    
+      <div id="navbar" class="navbar-collapse collapse">
+         <div class="hidden-xs navbar-form navbar-right">
+            <a href="#search" class="search-form-tigger btn btn-success"  data-toggle="search-form" style="background-color: white"><i class="fa fa-search" style="color:#00897b" aria-hidden="true"></i></a>
+         </div>
+     <div class="visible-xs navbar-form navbar-right" style="border-color:transparent;">
+            <input type="text" name="search" class="search form-control" placeholder="Search..." style="color: blue;">
+         </div>
+         <!--/.navbar-collapse -->
+      </div>
+    </div>
 
 
   
-<div class="container" style="border-color: #00897b">
+</nav>
+
+<div class="search-form-wrapper">
+   <form class="search-form" id="" action="">
+      <div class="input-group">
+         <input type="text" name="search" class="search form-control" placeholder="Search">
+         <span class="input-group-addon" id="basic-addon2"><i class="fa fa-search" aria-hidden="true"></i>
+         </span>
+         <span class="input-group-addon search-close" id="basic-addon2"><i class="fa fa-window-close" aria-hidden="true"></i>
+         </span>
+      </div>
+   </form>
+</div>
+
+
+  
+<div class="container" style="border-color: #00897b ; margin-top: 5%">
   <form >
     <div class="row" >
       <h4 style = "text-align:center ; ">Registration Form</h4>
@@ -205,6 +222,30 @@
     
   </form>
 </div>
+
+
+
+<script type="text/javascript">
+  $( document ).ready(function() {
+  $('[data-toggle=search-form]').click(function() {
+      $('.search-form-wrapper').toggleClass('open');
+      $('.search-form-wrapper .search').focus();
+      $('html').toggleClass('search-form-open');
+    });
+    $('[data-toggle=search-form-close]').click(function() {
+      $('.search-form-wrapper').removeClass('open');
+      $('html').removeClass('search-form-open');
+    });
+  $('.search-form-wrapper .search').keypress(function( event ) {
+    if($(this).val() == "Search") $(this).val("");
+  });
+
+  $('.search-close').click(function(event) {
+    $('.search-form-wrapper').removeClass('open');
+    $('html').removeClass('search-form-open');
+  });
+});
+</script>
 
 
 </body>
