--- a/Views/Styles/application.css
+++ b/Views/Styles/application.css
@@ -276,8 +276,8 @@ select option {
   position: absolute;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  width: 0;
+  height: 0;
   outline: none;
   opacity: 0;
   cursor: pointer;
