--- a/Views/application.html
+++ b/Views/application.html
@@ -83,15 +83,15 @@
         <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
         
 
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD -->
         <div class="image-upload-wrap">
           <img src="pp.jpg" style="width: 90%">
          <input class="file-upload-input" type='file' name="profile_photo" onchange="readURL(this);" accept="image/*" />
-=======
-        <div class="image-upload-wrap" id="image" name="profile_photo" >
+<!-- ======= -->
+        <!-- <div class="image-upload-wrap" id="image" name="profile_photo" >
           <img src="provost.jpg" style="width: 90%">
-         <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
->>>>>>> d1d57ac7eb16fd76cd197b8010ff8824f84f8123
+         <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" /> -->
+<!-- >>>>>>> d1d57ac7eb16fd76cd197b8010ff8824f84f8123 -->
         </div>
         <div class="file-upload-content" id="image" name="profile_photo" >
              <img class="file-upload-image" src="#"  />
