--- a/Views/application.html
+++ b/Views/application.html
@@ -9,16 +9,20 @@
    <title>Sign Up Form</title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
       <link rel="stylesheet" href="/Styles/toast.css">
-      <script src="/Script/toast.js"></script>
 
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
       <link rel="stylesheet" href="Styles/application.css">
-      <link rel="stylesheet" href="toggled-search-bar.css">        
+      <link rel="stylesheet" href="toggled-search-bar.css">
+
+      <script type="text/javascript" src="/Script/application.js"></script> 
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+      <script type="text/javascript" src="/Script/application.js"></script>
+       <script src="/Script/toast.js"></script> 
+       <script  src="Script/fileupload.js"></script>     
   
 </head>
 
@@ -72,8 +76,19 @@
       <h4 style = "text-align:center ; ">Registration Form</h4>
 
       <div class="file-upload" id="image" >
-        <img src="provost.jpg" style="width: 90%">
-            <button class="file-upload-btn" type="button" >Add Image</button>
+        <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
+        
+
+        <div class="image-upload-wrap">
+          <img src="provost.jpg" style="width: 90%">
+         <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
+        </div>
+        <div class="file-upload-content">
+             <img class="file-upload-image" src="#" alt="your image" />
+             <div class="image-title-wrap">
+                  <button type="button" onclick="removeUpload()" class="remove-image">Remove <span class="image-title">Uploaded Image</span></button>
+              </div>
+        </div> 
       </div>
 
 
@@ -162,7 +177,7 @@
     <div class="row">
 
        
-        <div class="input-group" style="width: 100%">
+        <div class="input-group" style="width: 100%;">
           <input type="radio" name="gender" value="male" id="gender-male"/>
           <label for="gender-male">Male</label>
           <input type="radio" name="gender" value="female" id="gender-female"/>
