--- a/Views/application.html
+++ b/Views/application.html
@@ -228,7 +228,7 @@
 
 
       <div >
-                    <input type="submit"  class="btn btn-success btn-lg"  style="color: white; background-color: #00897b">
+                    <input type="submit" name="SUBMIT" class="btn btn-success btn-lg"  style="color: white; background-color: #00897b">
       </div>
 
 
