--- a/Views/application.html
+++ b/Views/application.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <title>Sign Up Form</title>
+
+          <script  src="Script/jquery.min.js"></script>
+       <script src="/Script/bootstrap.min.js"></script>
+       
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+      <script type="text/javascript" src="/Script/application.js"></script>
+       <script src="/Script/toast.js"></script> 
+       <script  src="Script/fileupload.js"></script>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
       <link rel="stylesheet" href="/Styles/toast.css">
@@ -18,12 +26,8 @@
       <link rel="stylesheet" href="Styles/application.css">
       <link rel="stylesheet" href="toggled-search-bar.css">
 
-      <script type="text/javascript" src="/Script/application.js"></script> 
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-      <script type="text/javascript" src="/Script/application.js"></script>
-       <script src="/Script/toast.js"></script> 
-       <script  src="Script/fileupload.js"></script>     
-  
+
+
 </head>
 
 <body>
