--- a/Views/Styles/application.css
+++ b/Views/Styles/application.css
@@ -301,8 +301,8 @@ select option {
 
 .image-dropping,
 .image-upload-wrap:hover {
-  background-color: #1FB264;
-  border: 4px dashed #ffffff;
+  background-color: white;
+  //border: 4px dashed #ffffff;
 }
 
 .image-title-wrap {
