--- a/Views/application.html
+++ b/Views/application.html
@@ -75,11 +75,11 @@
 
   
 <div class="container" style="border-color: #00897b ; margin-top: 5%">
-  <form >
+  <form action="/students" method="post" enctype="multipart/form-data" >
     <div class="row" >
       <h4 style = "text-align:center ; ">Registration Form</h4>
 
-      <div class="file-upload" id="image" >
+      <div class="file-upload" id="image" name="profile_photo" >
         <button class="file-upload-btn" type="button" onclick="$('.file-upload-input').trigger( 'click' )">Add Image</button>
         
 
@@ -182,9 +182,9 @@
 
        
         <div class="input-group" style="width: 100%;">
-          <input type="radio" name="gender" value="male" id="gender-male"/>
+          <input type="radio" name="gender" value="Male" id="gender-male"/>
           <label for="gender-male">Male</label>
-          <input type="radio" name="gender" value="female" id="gender-female"/>
+          <input type="radio" name="gender" value="Female" id="gender-female"/>
           <label for="gender-female">Female</label>
         </div>
       
