--- a/Views/Styles/application.css
+++ b/Views/Styles/application.css
@@ -298,7 +298,11 @@ select option {
 }
 
 
-
+.image-upload-wrap {
+  //margin-top: 20px;
+  //border: 4px dashed #1FB264;
+  position: relative;
+}
 .image-dropping,
 .image-upload-wrap:hover {
   background-color: white;
