--- a/Views/application.html
+++ b/Views/application.html
@@ -163,12 +163,12 @@
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
                     <input type="number" placeholder="Student ID"  name="stdid" required>
-        <div class="input-icon"><i class="fa fa-id " style="color: #00897b"></i></div>
+        <div class="input-icon"><i class="fa fa-address-book " style="color: #00897b"></i></div>
       </div>
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
                     <input type="number" placeholder="Registration Number"  name="regno" required>
-        <div class="input-icon"><i class="fa fa-id " style="color: #00897b"></i></div>
+        <div class="input-icon"><i class="fa fa-address-book " style="color: #00897b"></i></div>
       </div>
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949"> 
@@ -178,7 +178,7 @@
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
                     <input type="number" placeholder="Level" name="level" required>
-        <div class="input-icon"><i class="fa fa- " style="color: #00897b"></i></div>
+        <div class="input-icon"><i class="fa fa-bookmark " style="color: #00897b"></i></div>
       </div>
 
     </div>
@@ -213,7 +213,7 @@
     <div class="row">
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
                     <input type="text" placeholder="Room number"  name="room" required>
-        <div class="input-icon"><i class="fa fa-id " style="color: #00897b"></i></div>
+        <div class="input-icon"><i class="fa fa-building " style="color: #00897b"></i></div>
       </div>
 
       <div class="input-group input-group-icon" style="width: 100%;color:   #424949">
